Phoenix: implement Market deserialization